--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,7 @@
 
   <nb-layout-column>
 
-    <h1>
-      {{title}}
-      
-       <app-hello-world></app-hello-world>
-       <app-user-item></app-user-item>
-       <app-user-list></app-user-list>
-    </h1>
+    <h1>{{title}}</h1>
   </nb-layout-column>
 
   <nb-layout-footer fixed>
