header footer layout added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,18 @@
 <nb-layout>
 
   <nb-layout-header fixed>
+    <h2>Awesome Company</h2>
+    
   <!-- Insert header here -->
   </nb-layout-header>
 
-  <nb-layout-column>
+  <nb-layout-column class="colored-column-basic">
 
     <h1>{{title}}</h1>
   </nb-layout-column>
 
   <nb-layout-footer fixed>
+    Contact us
   <!-- Insert footer here -->
   </nb-layout-footer>
 
